examples/test/testpolicy1672.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1672
  namespace: namespace1
spec:
  podSelector:
    matchLabels:
      key21: value27
      key34: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value38
      podSelector:
        matchLabels:
          key22: value7
          key2: value39
          key17: value33
